Skeleton app for SWA frontend, based on bfw-vendor-portal.

--- a/package.json
+++ b/package.json
@@ -1,24 +1,43 @@
 {
-  "name": "aswa-react-template",
+  "name": "bfw-workforce-portal",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fluentui/react": "^8.46.0",
+    "@tailwindcss/forms": "^0.3.4",
+    "formik": "^2.2.9",
+    "luxon": "^2.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2",
+    "runtypes": "^6.5.0",
+    "use-debounce": "^7.0.1",
+    "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "@craco/craco": "^6.4.2",
+    "@prettier/plugin-xml": "^1.2.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.8",
     "@types/jest": "^26.0.23",
+    "@types/luxon": "^2.0.8",
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "autoprefixer": "^9.8.8",
+    "node-sass": "^6.0.1",
+    "postcss": "^7.0.39",
+    "prettier": "^2.5.1",
     "react-scripts": "^4.0.3",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "ts-node": "^10.4.0",
     "typescript": "^4.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
