--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aaronpowell/react-static-web-apps-auth": "^1.2.1",
     "@fluentui/react": "^8.46.0",
     "@tailwindcss/forms": "^0.3.4",
     "formik": "^2.2.9",
