--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -17,8 +17,7 @@
           },
           "login": {
             "nameClaimType": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/name",
-            "scopes": ["openid", "profile"],
-            "loginParameterNames": []
+            "scopes": ["openid", "profile"]
           }
         }
       }
