--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -12,7 +12,7 @@
               "clientSecretSettingName": "B2C_CLIENT_SECRET"
             },
             "openIdConnectConfiguration": {
-              "wellKnownOpenIdConfiguration": "https://bfwextapps.b2clogin.com/bfwextapps.onmicrosoft.com/B2C_1_SignUpSignIn/v2.0/.well-known/openid-configuration"
+              "wellKnownOpenIdConfiguration": "https://bfwextapps.b2clogin.com/bfwextapps.onmicrosoft.com/B2C_1_SUSI/v2.0/.well-known/openid-configuration"
             }
           },
           "login": {
