--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -17,7 +17,8 @@
           },
           "login": {
             "nameClaimType": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/name",
-            "scopes": []
+            "scopes": ["openid"],
+            "loginParameterNames": []
           }
         }
       }
