--- a/api/package.json
+++ b/api/package.json
@@ -15,5 +15,8 @@
     "@azure/functions": "^1.2.3",
     "npm-run-all": "^4.1.5",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "@aaronpowell/static-web-apps-api-auth": "^0.1.3"
   }
 }
