--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,10 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "@aaronpowell/static-web-apps-api-auth": "^0.1.3"
+    "@aaronpowell/static-web-apps-api-auth": "^0.1.3",
+    "@pnp/common-commonjs": "^2.11.0",
+    "@pnp/logging-commonjs": "^2.11.0",
+    "@pnp/nodejs-commonjs": "^2.11.0",
+    "@pnp/sp-commonjs": "^2.11.0"
   }
 }
