--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -5,6 +5,9 @@
     "outDir": "dist",
     "rootDir": ".",
     "sourceMap": true,
-    "strict": false
+    "strict": false,
+    "strictNullChecks": true,
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true
   }
 }
