--- a/api/package.json
+++ b/api/package.json
@@ -18,10 +18,13 @@
   },
   "dependencies": {
     "@aaronpowell/static-web-apps-api-auth": "^0.1.3",
+    "@azure/identity": "^2.0.2",
+    "@microsoft/microsoft-graph-client": "^3.0.1",
     "@pnp/common-commonjs": "^2.11.0",
     "@pnp/logging-commonjs": "^2.11.0",
     "@pnp/nodejs-commonjs": "^2.11.0",
     "@pnp/sp-commonjs": "^2.11.0",
+    "isomorphic-fetch": "^3.0.0",
     "runtypes": "^6.5.0"
   }
 }
