--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@aaronpowell/static-web-apps-api-auth": "^0.1.3",
+    "@anzp/azure-function-multipart": "^2.0.0",
     "@azure/identity": "^2.0.2",
     "@microsoft/microsoft-graph-client": "^3.0.1",
     "@pnp/common-commonjs": "^2.11.0",
