--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
     "@aaronpowell/react-static-web-apps-auth": "^1.2.1",
     "@fluentui/react": "^8.52.3",
     "@tailwindcss/forms": "^0.3.4",
+    "@uppy/core": "^2.1.4",
+    "@uppy/react": "^2.1.2",
+    "@uppy/webcam": "^2.0.5",
+    "@uppy/xhr-upload": "^2.0.7",
     "formik": "^2.2.9",
     "luxon": "^2.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-html5-camera-photo": "^1.5.5",
     "react-router-dom": "^6.0.2",
+    "react-webcam": "^6.0.1",
     "runtypes": "^6.5.0",
     "use-debounce": "^7.0.1",
     "yup": "^0.32.11"
@@ -26,6 +32,7 @@
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.4",
+    "@types/react-html5-camera-photo": "^1.5.1",
     "autoprefixer": "^9.8.8",
     "node-sass": "^6.0.1",
     "postcss": "^7.0.39",
