Experiment with response override to rewrite unauthoised error during a cancelled login.

--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -2,6 +2,12 @@
   "navigationFallback": {
     "rewrite": "/"
   },
+  "responseOverrides": {
+    "401": {
+      "rewrite": "/",
+      "statusCode": 401
+    }
+  },
   "auth": {
     "identityProviders": {
       "customOpenIdConnectProviders": {
