--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
     "@pnp/nodejs-commonjs": "^2.11.0",
     "@pnp/sp-commonjs": "^2.11.0",
     "isomorphic-fetch": "^3.0.0",
-    "runtypes": "^6.5.0"
+    "runtypes": "^6.5.0",
+    "uuid": "^8.3.2"
   }
 }
