--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "devDependencies": {
     "@azure/functions": "^1.2.3",
+    "@types/uuid": "^8.3.4",
     "npm-run-all": "^4.1.5",
     "typescript": "^4.2.4"
   },
