--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -6,5 +6,6 @@ image:
   file: .gitpod.Dockerfile
 
 tasks:
-  - init: npm install && npm run build
+  - before: npm install -g @azure/static-web-apps-cli azure-functions-core-tools@3 --unsafe-perm true
+    init: npm install && cd api && npm run build
     command: npm run start
