--- a/api/package.json
+++ b/api/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "",
-  "version": "",
+  "name": "workforce-portal-api",
+  "version": "0.1",
   "scripts": {
     "build": "tsc",
     "build:production": "npm run prestart && npm prune --production",
@@ -12,14 +12,14 @@
   },
   "description": "",
   "devDependencies": {
-    "@azure/functions": "^1.2.3",
+    "@azure/functions": "^3.5.1",
     "@types/uuid": "^8.3.4",
     "npm-run-all": "^4.1.5",
     "typescript": "^4.2.4"
   },
   "dependencies": {
     "@aaronpowell/static-web-apps-api-auth": "^0.1.3",
-    "@anzp/azure-function-multipart": "^2.0.0",
+    "@anzp/azure-function-multipart": "^3.1.0",
     "@azure/identity": "^2.0.2",
     "@microsoft/microsoft-graph-client": "^3.0.1",
     "@pnp/common-commonjs": "^2.11.0",
