--- a/package.json
+++ b/package.json
@@ -33,25 +33,23 @@
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.4",
     "@types/react-html5-camera-photo": "^1.5.1",
+    "@vitejs/plugin-react": "^4.1.0",
     "autoprefixer": "^9.8.8",
     "node-sass": "^6.0.1",
     "postcss": "^7.0.39",
     "prettier": "^2.5.1",
-    "react-scripts": "^4.0.3",
+    "sass": "^1.69.5",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "ts-node": "^10.4.0",
-    "typescript": "^4.2.4"
-  },
-  "resolutions": {
-    "//": "See https://github.com/facebook/create-react-app/issues/11773",
-    "react-error-overlay": "6.0.9"
+    "typescript": "^4.2.4",
+    "vite": "^4.5.0",
+    "vite-plugin-svgr": "^4.1.0"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "react-scripts eject",
-    "preinstall": "npx npm-force-resolutions"
+    "start": "vite",
+    "build": "vite build",
+    "test": "vite test",
+    "serve": "vite preview"
   },
   "eslintConfig": {
     "extends": "react-app"
