--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "command": "swa start http://localhost:5173 --api-location http://localhost:7071",
+      "command": "npm run-script swa",
       "name": "Run emulator",
       "request": "launch",
       "type": "node-terminal"
