--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@azure/static-web-apps-cli": "^1.1.5",
     "@craco/craco": "^6.4.2",
     "@prettier/plugin-xml": "^1.2.0",
     "@testing-library/jest-dom": "^5.12.0",
@@ -49,7 +50,8 @@
     "start": "vite",
     "build": "vite build",
     "test": "vite test",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "swa": "swa start http://localhost:5173 --api-location http://localhost:7071"
   },
   "eslintConfig": {
     "extends": "react-app"
