--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -5,7 +5,7 @@
     "outDir": "dist",
     "rootDir": ".",
     "sourceMap": true,
-    "strict": false,
+    "strict": true,
     "strictNullChecks": true,
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true
