Added exploratory tests to confirm expectations for data and error types returned from the Graph API (using the microsoft-graph-client) for sites, lists and list items.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,6 +26,13 @@
       "request": "attach",
       "port": 9229,
       "preLaunchTask": "func: host start"
+    },
+    {
+      "type": "node-terminal",
+      "name": "API Exploratory Tests",
+      "request": "launch",
+      "command": "npm run test:exploratory",
+      "cwd": "${workspaceFolder}/api"
     }
   ],
   "compounds": [
