--- a/api/package.json
+++ b/api/package.json
@@ -8,13 +8,19 @@
     "prestart": "npm run build && func extensions install",
     "start:host": "func start",
     "start": "npm-run-all --parallel start:host watch",
-    "test": "echo \"No tests yet...\""
+    "test": "jest --roots ./tests",
+    "test:exploratory": "env-cmd -f ./tests-exploratory/.env jest --roots ./tests-exploratory"
   },
   "description": "",
   "devDependencies": {
     "@azure/functions": "^3.5.1",
+    "@microsoft/microsoft-graph-types": "^2.40.0",
+    "@types/jest": "^29.5.12",
     "@types/uuid": "^8.3.4",
+    "env-cmd": "^10.1.0",
+    "jest": "^29.7.0",
     "npm-run-all": "^4.1.5",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.4.4"
   },
   "dependencies": {
@@ -26,6 +32,7 @@
     "@pnp/logging-commonjs": "^2.11.0",
     "@pnp/nodejs-commonjs": "^2.11.0",
     "@pnp/sp-commonjs": "^2.11.0",
+    "effect": "^2.4.18",
     "isomorphic-fetch": "^3.0.0",
     "runtypes": "^6.5.0",
     "uuid": "^8.3.2"
