Enable exactOptionalPropertyTypes tsconfig option ahead of introduction of effect-ts and effect-schema.

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -8,6 +8,7 @@
     "strict": true,
     "strictNullChecks": true,
     "skipLibCheck": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "exactOptionalPropertyTypes": true
   }
 }
