Introduced effect schema for decoding Applications from SharePoint list items.  Introduced effect for retrieving the application as part of a get-profile response.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,6 +29,13 @@
     },
     {
       "type": "node-terminal",
+      "name": "API Integration Tests",
+      "request": "launch",
+      "command": "npm run test:integration",
+      "cwd": "${workspaceFolder}/api"
+    },
+    {
+      "type": "node-terminal",
       "name": "API Exploratory Tests",
       "request": "launch",
       "command": "npm run test:exploratory",
