--- a/api/tests-integration/template.env
+++ b/api/tests-integration/template.env
@@ -9,8 +9,9 @@
 # of the site should be provided through the WORKFORCE_SITE_HOSTNAME and
 # WORKFORCE_SITE_PATH variables.
 
-# The tests interact with the Applications list in the workforce site. The GUID of the
-# Applications listshould be provided through the WORKFORCE_APPLICATIONS_LIST_GUID variable.
+# The tests interact with lists in the workforce site. The GUID of the lists should be
+# be provided through the WORKFORCE_APPLICATIONS_LIST_GUID and WORKFORCE_LOGINS_LIST_GUID
+# variables.
 
 # The tests query for an application by profile ID. The ID of the profile should be provided
 # in the TEST_PROFILE_ID variable.
@@ -24,5 +25,6 @@ AZURE_CLIENT_SECRET=
 WORKFORCE_SITE_HOSTNAME=
 WORKFORCE_SITE_PATH=
 WORKFORCE_APPLICATIONS_LIST_GUID=
+WORKFORCE_LOGINS_LIST_GUID=
 TEST_PROFILE_ID=
 TEST_APPLICATION_ID=
