Read exploratory tests' configuration at runtime, avoiding need to load values into environment variables as part of the npm run script.
Configured vscode to run unit, integration and exploratory tests.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,24 @@
   "azureFunctions.projectLanguage": "TypeScript",
   "azureFunctions.projectRuntime": "~4",
   "debug.internalConsoleOptions": "neverOpen",
-  "azureFunctions.preDeployTask": "npm prune (functions)"
+  "azureFunctions.preDeployTask": "npm prune (functions)",
+  "jest.virtualFolders": [
+    {
+      "name": "api-unit-tests",
+      "rootPath": "api",
+      "jestCommandLine": "npm run test --"
+    },
+    {
+      "name": "integration-tests",
+      "rootPath": "api",
+      "runMode": "on-demand",
+      "jestCommandLine": "npm run test:integration --"
+    },
+    {
+      "name": "exploratory-tests",
+      "rootPath": "api",
+      "runMode": "on-demand",
+      "jestCommandLine": "npm run test:exploratory --"
+    }
+  ]
 }
