--- a/api/package.json
+++ b/api/package.json
@@ -10,7 +10,7 @@
     "start": "npm-run-all --parallel start:host watch",
     "test": "jest --roots ./tests",
     "test:integration": "env-cmd -f ./tests-integration/.env jest --roots ./tests-integration",
-    "test:exploratory": "env-cmd -f ./tests-exploratory/.env jest --roots ./tests-exploratory"
+    "test:exploratory": "jest --roots ./tests-exploratory"
   },
   "description": "",
   "devDependencies": {
@@ -18,7 +18,9 @@
     "@microsoft/microsoft-graph-types": "^2.40.0",
     "@types/jest": "^29.5.12",
     "@types/uuid": "^8.3.4",
+    "dotenv": "^16.4.5",
     "env-cmd": "^10.1.0",
+    "envalid": "^8.0.0",
     "jest": "^29.7.0",
     "npm-run-all": "^4.1.5",
     "ts-jest": "^29.1.2",
