--- a/api/tests-exploratory/template.env
+++ b/api/tests-exploratory/template.env
@@ -5,6 +5,10 @@
 # where Graph queries will be executed. Details of the application should be provided
 # through the AZURE_TENANT_ID, AZURE_CLIENT_ID, and AZURE_CLIENT_SECRET variables.
 
+# Some tests depend on connecting to an Azure B2C tenant. Details of the application 
+# registered with the B2C tenant should be provided through the AZURE_B2C_TENANT_ID,
+# AZURE_B2C_CLIENT_ID, and AZURE_B2C_CLIENT_SECRET variables.
+
 # The tests depend on connecting to a SharePoint site. Details of the site should be
 # provided through the GRAPH_SITE_HOSTNAME and GRAPH_SITE_PATH variables.
 
@@ -15,6 +19,9 @@
 AZURE_TENANT_ID=
 AZURE_CLIENT_ID=
 AZURE_CLIENT_SECRET=
+AZURE_B2C_TENANT_ID=
+AZURE_B2C_CLIENT_ID=
+AZURE_B2C_CLIENT_SECRET=
 GRAPH_SITE_HOSTNAME=
 GRAPH_SITE_PATH=
 GRAPH_LIST_NAME=
