Added repository to retrieve basic graph user details.
This is used to find the email address of API users that have been authenticated through Azure B2C.

--- a/api/tests-integration/template.env
+++ b/api/tests-integration/template.env
@@ -19,12 +19,19 @@
 # The tests query for an update an application by application ID. The ID of the application
 # should be provided in the TEST_APPLICATION_ID variable.
 
+# The tests query for a user from the Graph API. The ID of the user should be provided in
+# the TEST_GRAPH_USER_ID corresponding the the tenant specified in AZURE_B2C_TENANT_ID.
+
 AZURE_TENANT_ID=
 AZURE_CLIENT_ID=
 AZURE_CLIENT_SECRET=
+AZURE_B2C_TENANT_ID=
+AZURE_B2C_CLIENT_ID=
+AZURE_B2C_CLIENT_SECRET=
 WORKFORCE_SITE_HOSTNAME=
 WORKFORCE_SITE_PATH=
 WORKFORCE_APPLICATIONS_LIST_GUID=
 WORKFORCE_LOGINS_LIST_GUID=
 TEST_PROFILE_ID=
 TEST_APPLICATION_ID=
+TEST_GRAPH_USER_ID=
