--- a/api/tests-exploratory/template.env
+++ b/api/tests-exploratory/template.env
@@ -7,7 +7,8 @@
 
 # Some tests depend on connecting to an Azure B2C tenant. Details of the application 
 # registered with the B2C tenant should be provided through the AZURE_B2C_TENANT_ID,
-# AZURE_B2C_CLIENT_ID, and AZURE_B2C_CLIENT_SECRET variables.
+# AZURE_B2C_CLIENT_ID, and AZURE_B2C_CLIENT_SECRET variables. GRAPH_USER_ID should 
+# be set to the Object ID in the tenant referenced through AZURE_B2C_TENANT_ID.
 
 # The tests depend on connecting to a SharePoint site. Details of the site should be
 # provided through the GRAPH_SITE_HOSTNAME and GRAPH_SITE_PATH variables.
@@ -26,3 +27,4 @@ GRAPH_SITE_HOSTNAME=
 GRAPH_SITE_PATH=
 GRAPH_LIST_NAME=
 GRAPH_LIST_ITEM_ID=
+GRAPH_USER_ID=
