Ensure VSCode uses Prettier

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,6 @@
       "runMode": "on-demand",
       "jestCommandLine": "npm run test:exploratory --"
     }
-  ]
+  ],
+  "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
