--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,5 +25,7 @@
     }
   ],
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "eslint.experimental.useFlatConfig": true,
+  "eslint.workingDirectories": [".", "./api"]
 }
