--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@azure/static-web-apps-cli": "^1.1.5",
+    "@eslint/js": "^9.2.0",
     "@prettier/plugin-xml": "^1.2.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
@@ -35,6 +36,9 @@
     "@types/react-html5-camera-photo": "^1.5.1",
     "@vitejs/plugin-react": "^4.1.0",
     "autoprefixer": "^9.8.8",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
+    "globals": "^15.2.0",
     "node-sass": "^6.0.1",
     "postcss": "^7.0.39",
     "prettier": "^2.5.1",
@@ -42,6 +46,7 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "ts-node": "^10.4.0",
     "typescript": "^5.4.5",
+    "typescript-eslint": "^7.9.0",
     "vite": "^4.5.0",
     "vite-plugin-svgr": "^4.1.0"
   },
@@ -51,9 +56,6 @@
     "test": "vite test",
     "serve": "vite preview",
     "swa": "swa start http://localhost:5173 --api-location http://localhost:7071"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
