Address eslint errors for UI

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,5 +27,6 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
   "eslint.experimental.useFlatConfig": true,
-  "eslint.workingDirectories": [".", "./api"]
+  "eslint.workingDirectories": [".", "./api"],
+  "eslint.lintTask.enable": true
 }
