--- a/api/package.json
+++ b/api/package.json
@@ -15,16 +15,20 @@
   "description": "",
   "devDependencies": {
     "@azure/functions": "^3.5.1",
+    "@eslint/js": "^9.2.0",
     "@microsoft/microsoft-graph-types": "^2.40.0",
     "@types/jest": "^29.5.12",
     "@types/uuid": "^8.3.4",
     "dotenv": "^16.4.5",
     "env-cmd": "^10.1.0",
     "envalid": "^8.0.0",
+    "eslint": "^8.57.0",
+    "globals": "^15.2.0",
     "jest": "^29.7.0",
     "npm-run-all": "^4.1.5",
     "ts-jest": "^29.1.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.9.0"
   },
   "dependencies": {
     "@aaronpowell/static-web-apps-api-auth": "^0.1.3",
