--- a/api/package.json
+++ b/api/package.json
@@ -34,6 +34,8 @@
     "@aaronpowell/static-web-apps-api-auth": "^0.1.3",
     "@anzp/azure-function-multipart": "^3.1.0",
     "@azure/identity": "^2.0.2",
+    "@effect/platform": "^0.53.12",
+    "@effect/platform-node": "^0.49.12",
     "@effect/schema": "^0.67.9",
     "@microsoft/microsoft-graph-client": "^3.0.1",
     "@pnp/common-commonjs": "^2.11.0",
