Exploratory test to exercise authenticating to and calling the workforce-api

--- a/api/tests-exploratory/template.env
+++ b/api/tests-exploratory/template.env
@@ -17,6 +17,9 @@
 # one item. The name of the list and the ID of the item should be provided through the 
 # GRAPH_LIST_NAME and GRAPH_LIST_ITEM_ID variables.
 
+# Some tests relate to calling the workforce-api after retrieving an access token
+# from an AAD identity provider. These tests rely on the WF_API* variables.
+
 AZURE_TENANT_ID=
 AZURE_CLIENT_ID=
 AZURE_CLIENT_SECRET=
@@ -28,3 +31,10 @@ GRAPH_SITE_PATH=
 GRAPH_LIST_NAME=
 GRAPH_LIST_ITEM_ID=
 GRAPH_USER_ID=
+
+WF_API_URL=
+
+WF_API_CLIENT_AUTH_AUTHORITY=
+WF_API_CLIENT_AUTH_CLIENT_ID=
+WF_API_CLIENT_AUTH_CLIENT_SECRET=
+WF_API_CLIENT_AUTH_SCOPES=
