Added getProfileByUserId to profiles repository.
Implemented by calling the Workforce API

--- a/api/tests-integration/template.env
+++ b/api/tests-integration/template.env
@@ -22,6 +22,13 @@
 # The tests query for a user from the Graph API. The ID of the user should be provided in
 # the TEST_GRAPH_USER_ID corresponding the the tenant specified in AZURE_B2C_TENANT_ID.
 
+# The tests query the Workforce API for profiles by User ID. The user ID should be provided in the 
+# TEST_GRAPH_USER_ID environment variable. The base url for the Workforce API should be provided
+# in the WF_API_URL envrironment variable.
+
+# Credentials to authenticate with the Workforce API should be provided through the WF_API_CLIENT_AUTH_*
+# environment variables.
+
 AZURE_TENANT_ID=
 AZURE_CLIENT_ID=
 AZURE_CLIENT_SECRET=
@@ -35,3 +42,15 @@ WORKFORCE_LOGINS_LIST_GUID=
 TEST_PROFILE_ID=
 TEST_APPLICATION_ID=
 TEST_GRAPH_USER_ID=
+
+WF_API_URL= # Example: https://workforce-api.abcd.azurecontainerapps.io
+WF_API_CLIENT_AUTH_AUTHORITY=    # Example: https://login.microsoftonline.com/<tenant id>
+WF_API_CLIENT_AUTH_CLIENT_ID=
+WF_API_CLIENT_AUTH_CLIENT_SECRET=
+WF_API_CLIENT_AUTH_SCOPE= # Example: api://6b8a4a54-2a91-4aea-8d75-5899ff2bdf10/.default
+
+# The WORKFORCE_PROFILE_LIST_GUID is needed while the Portal API is transitioning to use the 
+# Workforce API as its data backend. Once the transition is complete, the portal shall no longer
+# need to access the SharePoint data store directly and the following environment variable 
+# can be removed.
+WORKFORCE_PROFILES_LIST_GUID= # Example: 569ffdbd-be2c-4c9b-b90f-a775766beecf
