--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "tsc",
     "build:production": "npm run prestart && npm prune --production",
-    "buildAndTest": "npm run prestart && npm run test && npm prune --production",
+    "buildAndTest": "npm run build && npm run test && npm prune --production",
     "watch": "tsc --w",
     "prestart": "npm run build && func extensions install",
     "start:host": "func start",
