--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,6 +5,8 @@
   // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
   "image": "mcr.microsoft.com/devcontainers/typescript-node:16",
 
+  "runArgs": ["--add-host=host.docker.internal:host-gateway"],
+
   // Features to add to the dev container. More info: https://containers.dev/features.
   // "features": {},
 
