--- a/api/package.json
+++ b/api/package.json
@@ -33,19 +33,19 @@
   },
   "dependencies": {
     "@aaronpowell/static-web-apps-api-auth": "^0.1.3",
-    "@anzp/azure-function-multipart": "^3.1.0",
     "@azure/identity": "^2.0.2",
     "@azure/msal-node": "^2.9.2",
-    "@effect/platform": "^0.53.12",
-    "@effect/platform-node": "^0.49.12",
-    "@effect/schema": "^0.67.9",
+    "@effect/platform": "^0.58.12",
+    "@effect/platform-node": "^0.53.11",
+    "@effect/schema": "^0.68.11",
     "@microsoft/microsoft-graph-client": "^3.0.1",
     "@pnp/common-commonjs": "^2.11.0",
     "@pnp/logging-commonjs": "^2.11.0",
     "@pnp/nodejs-commonjs": "^2.11.0",
     "@pnp/sp-commonjs": "^2.11.0",
-    "effect": "^3.2.1",
+    "effect": "^3.4.4",
     "fast-check": "^3.17.1",
+    "formdata-node": "^6.0.3",
     "isomorphic-fetch": "^3.0.0",
     "runtypes": "^6.5.0",
     "uuid": "^8.3.2"
