--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -40,6 +40,7 @@
         "ms-azuretools.vscode-azurefunctions",
         "ms-azuretools.vscode-azurestaticwebapps",
         "Orta.vscode-jest",
+        "ms-azuretools.vscode-bicep",
         "GitHub.vscode-github-actions"
       ]
     }
