--- a/.github/workflows/provision-dev.yml
+++ b/.github/workflows/provision-dev.yml
@@ -29,15 +29,19 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Provision base resources
+      - name: Ensure resource group exists
+        uses: azure/CLI@965c8d7571d2231a54e321ddd07f7b10317f34d9
+        with:
+          inlineScript: |
+            az group create --resource-group "${{ vars.AZURE_RESOURCE_GROUP_NAME_DEV }}${{ vars.AZURE_RESOURCE_UNIQUE_NAME_ELEMENT_DEV }}" --location "${{ vars.AZURE_RESOURCE_GROUP_LOCATION_DEV }}"
+
+      - name: Provision SWA resources
         uses: azure/arm-deploy@a1361c2c2cd398621955b16ca32e01c65ea340f5
         with:
           scope: resourcegroup
-          resourceGroupName: ${{ vars.AZURE_RESOURCE_GROUP_NAME_DEV }}
+          resourceGroupName: ${{ vars.AZURE_RESOURCE_GROUP_NAME_DEV }}${{ vars.AZURE_RESOURCE_UNIQUE_NAME_ELEMENT_DEV }}
           deploymentName: ${{ github.run_number }}
           template: ${{ github.workspace }}/infra/workforce-portal.bicep
           parameters: >-
             environmentName=dev
-            resourceUniqueNameElement=31650
-            repositoryUrl=${{ github.server_url }}/${{ github.repository }}
-            repositoryToken=$${{ github.token }}
+            resourceUniqueNameElement=${{ vars.AZURE_RESOURCE_UNIQUE_NAME_ELEMENT_DEV }}
