--- a/.github/workflows/provision-dev.yml
+++ b/.github/workflows/provision-dev.yml
@@ -30,10 +30,8 @@ jobs:
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Ensure resource group exists
-        uses: azure/CLI@965c8d7571d2231a54e321ddd07f7b10317f34d9
-        with:
-          inlineScript: |
-            az group create --resource-group "${{ vars.AZURE_RESOURCE_GROUP_NAME_DEV }}${{ vars.AZURE_RESOURCE_UNIQUE_NAME_ELEMENT_DEV }}" --location "${{ vars.AZURE_RESOURCE_GROUP_LOCATION_DEV }}"
+        run: |
+          az group create --resource-group "${{ vars.AZURE_RESOURCE_GROUP_NAME_DEV }}${{ vars.AZURE_RESOURCE_UNIQUE_NAME_ELEMENT_DEV }}" --location "${{ vars.AZURE_RESOURCE_GROUP_LOCATION_DEV }}"
 
       - name: Provision SWA resources
         uses: azure/arm-deploy@a1361c2c2cd398621955b16ca32e01c65ea340f5
