Quote bicep parameters from environment variables incase they contain whitespace

--- a/.github/workflows/provision-dev.yml
+++ b/.github/workflows/provision-dev.yml
@@ -48,29 +48,29 @@ jobs:
           template: ${{ github.workspace }}/infra/workforce-portal.bicep
           parameters: >-
             environmentName=dev
-            resourceUniqueNameElement=${{ env.AZURE_RESOURCE_UNIQUE_NAME_ELEMENT }}
-            b2cClientId=${{ secrets.B2C_CLIENT_ID_DEV }}
-            b2cClientSecret=${{ secrets.B2C_CLIENT_SECRET_DEV }}
-            b2cTenantId=${{ secrets.B2C_TENANT_ID_DEV }}
-            graphClientId=${{ secrets.GRAPH_CLIENT_ID_DEV }}
-            graphClientSecret=${{ secrets.GRAPH_CLIENT_SECRET_DEV }}
-            graphTenantId=${{ secrets.GRAPH_TENANT_ID_DEV }}
-            wfSharePointSite=${{ secrets.WF_SHAREPOINT_SITE_DEV }}
-            wfSharePointSiteHostname=${{ secrets.WF_SHAREPOINT_SITE_HOSTNAME_DEV }}
-            wfSharePointSitePath=${{ secrets.WF_SHAREPOINT_SITE_PATH_DEV }}
-            wfSpClientId=${{ secrets.WF_SHAREPOINT_CLIENT_ID_DEV }}
-            wfSpClientSecret=${{ secrets.WF_SHAREPOINT_CLIENT_SECRET_DEV }}
-            wfLoginsListGuid=${{ secrets.WF_LOGINS_LIST_GUID_DEV }}
-            wfProfilesListGuid=${{ secrets.WF_PROFILES_LIST_GUID_DEV }}
-            wfApplicationsListGuid=${{ secrets.WF_APPLICATIONS_LIST_GUID_DEV }}
-            wfTeamsListGuid=${{ secrets.WF_TEAMS_LIST_GUID_DEV }}
-            wfPhotosListGuid=${{ secrets.WF_PHOTOS_LIST_GUID_DEV }}
-            wfPhotosServerRelativeUrl=${{ secrets.WF_PHOTOS_SERVER_RELATIVE_URL_DEV }}
-            wfPhotosLibraryTitle=${{ secrets.WF_PHOTOS_LIBRARY_TITLE_DEV }}
-            wfMaxProfilePhotosPerPerson=${{ secrets.WF_MAX_PROFILE_PHOTOS_PER_PERSON_DEV }}
-            signUpSignInAuthority=${{ secrets.SIGN_UP_SIGN_IN_AUTHORITY_DEV }}
-            wfApiUrl=${{ secrets.WF_API_URL_DEV }}
-            wfApiClientAuthAuthority=${{ secrets.WF_API_CLIENT_AUTH_AUTHORITY_DEV }}
-            wfApiClientAuthClientId=${{ secrets.WF_API_CLIENT_AUTH_CLIENT_ID_DEV }}
-            wfApiClientAuthClientSecret=${{ secrets.WF_API_CLIENT_AUTH_CLIENT_SECRET_DEV }}
-            wfApiClientAuthScope=${{ secrets.WF_API_CLIENT_AUTH_SCOPE_DEV }}
+            resourceUniqueNameElement="${{ env.AZURE_RESOURCE_UNIQUE_NAME_ELEMENT }}"
+            b2cClientId="${{ secrets.B2C_CLIENT_ID_DEV }}"
+            b2cClientSecret="${{ secrets.B2C_CLIENT_SECRET_DEV }}"
+            b2cTenantId="${{ secrets.B2C_TENANT_ID_DEV }}"
+            graphClientId="${{ secrets.GRAPH_CLIENT_ID_DEV }}"
+            graphClientSecret="${{ secrets.GRAPH_CLIENT_SECRET_DEV }}"
+            graphTenantId="${{ secrets.GRAPH_TENANT_ID_DEV }}"
+            wfSharePointSite="${{ secrets.WF_SHAREPOINT_SITE_DEV }}"
+            wfSharePointSiteHostname="${{ secrets.WF_SHAREPOINT_SITE_HOSTNAME_DEV }}"
+            wfSharePointSitePath="${{ secrets.WF_SHAREPOINT_SITE_PATH_DEV }}"
+            wfSpClientId="${{ secrets.WF_SHAREPOINT_CLIENT_ID_DEV }}"
+            wfSpClientSecret="${{ secrets.WF_SHAREPOINT_CLIENT_SECRET_DEV }}"
+            wfLoginsListGuid="${{ secrets.WF_LOGINS_LIST_GUID_DEV }}"
+            wfProfilesListGuid="${{ secrets.WF_PROFILES_LIST_GUID_DEV }}"
+            wfApplicationsListGuid="${{ secrets.WF_APPLICATIONS_LIST_GUID_DEV }}"
+            wfTeamsListGuid="${{ secrets.WF_TEAMS_LIST_GUID_DEV }}"
+            wfPhotosListGuid="${{ secrets.WF_PHOTOS_LIST_GUID_DEV }}"
+            wfPhotosServerRelativeUrl="${{ secrets.WF_PHOTOS_SERVER_RELATIVE_URL_DEV }}"
+            wfPhotosLibraryTitle="${{ secrets.WF_PHOTOS_LIBRARY_TITLE_DEV }}"
+            wfMaxProfilePhotosPerPerson="${{ secrets.WF_MAX_PROFILE_PHOTOS_PER_PERSON_DEV }}"
+            signUpSignInAuthority="${{ secrets.SIGN_UP_SIGN_IN_AUTHORITY_DEV }}"
+            wfApiUrl="${{ secrets.WF_API_URL_DEV }}"
+            wfApiClientAuthAuthority="${{ secrets.WF_API_CLIENT_AUTH_AUTHORITY_DEV }}"
+            wfApiClientAuthClientId="${{ secrets.WF_API_CLIENT_AUTH_CLIENT_ID_DEV }}"
+            wfApiClientAuthClientSecret="${{ secrets.WF_API_CLIENT_AUTH_CLIENT_SECRET_DEV }}"
+            wfApiClientAuthScope="${{ secrets.WF_API_CLIENT_AUTH_SCOPE_DEV }}"
