--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@aaronpowell/react-static-web-apps-auth": "^1.2.1",
-    "@fluentui/react": "^8.52.3",
+    "@fluentui/react": "^8.119.1",
     "@tailwindcss/forms": "^0.3.4",
-    "@uppy/core": "^2.1.4",
-    "@uppy/react": "^2.1.2",
-    "@uppy/webcam": "^2.0.5",
-    "@uppy/xhr-upload": "^2.0.7",
+    "@uppy/core": "^2.3.4",
+    "@uppy/dashboard": "^2.4.3",
+    "@uppy/drag-drop": "^2.1.2",
+    "@uppy/react": "^2.2.3",
+    "@uppy/webcam": "^2.2.2",
+    "@uppy/xhr-upload": "^2.1.3",
     "formik": "^2.2.9",
     "luxon": "^2.2.0",
     "react": "^18.3.1",
@@ -31,8 +32,8 @@
     "@types/jest": "^26.0.23",
     "@types/luxon": "^2.0.8",
     "@types/node": "^15.0.2",
-    "@types/react": "^17.0.5",
-    "@types/react-dom": "^17.0.4",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@types/react-html5-camera-photo": "^1.5.1",
     "@vitejs/plugin-react": "^4.1.0",
     "autoprefixer": "^9.8.8",
