Store profiles and forms in Redux.
Use wf-api to manage creation/deletion/lookup of user logins and profiles.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@effect/platform": "^0.58.27",
+    "@effect/platform-browser": "^0.37.27",
+    "@effect/schema": "^0.68.23",
     "@fluentui/react": "^8.119.1",
+    "@reduxjs/toolkit": "^2.2.6",
     "@tailwindcss/forms": "^0.3.4",
     "@uppy/core": "^2.3.4",
     "@uppy/dashboard": "^2.4.3",
@@ -11,11 +15,13 @@
     "@uppy/react": "^2.2.3",
     "@uppy/webcam": "^2.2.2",
     "@uppy/xhr-upload": "^2.1.3",
+    "effect": "^3.5.3",
     "formik": "^2.2.9",
     "luxon": "^2.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-html5-camera-photo": "^1.5.5",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.0.2",
     "react-webcam": "^6.0.1",
     "runtypes": "^6.5.0",
@@ -23,7 +29,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@azure/static-web-apps-cli": "^1.1.5",
+    "@azure/static-web-apps-cli": "^1.1.10",
     "@eslint/js": "^9.2.0",
     "@prettier/plugin-xml": "^1.2.0",
     "@testing-library/jest-dom": "^5.12.0",
