--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.0.2",
     "react-webcam": "^6.0.1",
     "runtypes": "^6.5.0",
+    "survey-react-ui": "^1.11.7",
     "use-debounce": "^7.0.1",
     "yup": "^0.32.11"
   },
