--- a/api/package.json
+++ b/api/package.json
@@ -40,9 +40,6 @@
     "@effect/schema": "^0.68.11",
     "@microsoft/microsoft-graph-client": "^3.0.1",
     "effect": "^3.4.4",
-    "fast-check": "^3.17.1",
-    "formdata-node": "^6.0.3",
-    "isomorphic-fetch": "^3.0.0",
-    "uuid": "^8.3.2"
+    "isomorphic-fetch": "^3.0.0"
   }
 }
