--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.9.0",
     "vite": "^4.5.0",
+    "vite-plugin-checker": "^0.7.2",
     "vite-plugin-svgr": "^4.1.0"
   },
   "scripts": {
